--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,5 +1,31 @@
 .home {
-  margin-top: 200px;
+  padding-top: 100px;
   text-align: center;
-  color: #333;
+  color: #e8ecf2;
+  max-width: 900px;
+  margin: 0 auto;
+  line-height: 1.6;
+}
+
+.word {
+  font-size: 58px;
+  font-weight: 700;
+  margin-bottom: 25px;
+  color: #e8ecf2;
+  letter-spacing: 1px;
+}
+
+.home-sub {
+  font-size: 22px;
+  font-weight: 500;
+  margin-bottom: 18px;
+  color: #e8ecf2;
+}
+
+.home-info {
+  font-size: 18px;
+  font-weight: 400;
+  max-width: 720px;
+  margin: 0 auto;
+  color: #9aa2ad;
 }
